[gd_scene load_steps=3 format=3 uid="uid://bbs2ngdxw6q88"]

[ext_resource type="Script" path="res://scenes/components/object_draggable.gd" id="1_3v351"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xuxk1"]
size = Vector2(32, 33.3333)

[node name="ObjectDraggable" type="Sprite2D"]
texture_filter = 1
script = ExtResource("1_3v351")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_xuxk1")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
